# poker

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-web.bat
.github/workflows/: c-cpp.yml
nginx docker/: docker-compose.yml  nginx.conf
nginx docker/html/: index.html
resources/: test.fs
src/: core_basic_window.c  core_basic_window.h  main.c
src/client/: cards.c  cards.h  client.c  client.h  clientWebsocket.h  core_basic_window.c  core_basic_window.h  main.c  pokerConfig.h  renderer.c  renderer.h  resources.c  resources.h  wasmClientWebsocket.c  windowsClientWebsocket.c
src/client/gui/: button.c  button.h  draggable.c  draggable.h  gui.c  gui.h  minitextbox.c  minitextbox.h  textbox.c  textbox.h
src/common/: game.c  game.h  player.h
src/common/poker/: card.h  deck.c  deck.h  hands.c  hands.h
src/common/vector/: queue.c  queue.h  vector.c  vector.h
src/poker/: card.c  deck.c  hands.h
src/server/: game.h  main.c  player.h  server.c  server.h  serverWebsocket.h  windowsServerWebsocket.c
src/vector/: vector.h
src/websockets/: clientWebsocket.h  serverWebsocket.h  windowsClientWebsocket.c  windowsServerWebsocket.c
